package llql_proto;
option java_package = "com.vitessedata.llql.llql_proto";
option java_outer_classname = "LLQLError"; 

enum ErrorCode {
    EC_OK                   = 0;
    EC_STOP                 = 1;
    EC_RUNTIME_ERROR        = 2;

    EC_JIT_INIT_FAILED      = 100;
    EC_JIT_FAILED           = 101;

    EC_OUT_OF_RESOURCE      = 1000;
    EC_OUT_OF_MEMORY        = 1001;

    EC_BAD_MSG              = 2000;
    EC_BAD_MSG_CHKSUM       = 2001;
    EC_QUERY_NOT_REGISTERED = 2002;
    EC_OBSOLETE             = 2003;

    EC_NETWORK_ERROR        = 3000;

    EC_CSV_PARSING_ERROR    = 4000;
    EC_INT_PARSING_ERROR    = 4001;
    EC_FLOAT_PARSING_ERROR  = 4002;

    EC_NYI                  = 1000000; 
    EC_TEST_WRONG_RESULT    = 1000001;
}

message Error {
    required ErrorCode ec   = 1;
    required string msg     = 2;
}

